# kaist-cli

./: README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: CLEAN_BREAK_RFC.md  MIGRATION.md  PERFORMANCE.md  PRODUCT_SPEC.md  RELEASES.md
scripts/: build_release_bundle.sh  pyinstaller_entrypoint.py  smoke.sh
skills/kaist-cli/: SKILL.md
skills/kaist-cli/.claude-plugin/: marketplace.json  plugin.json
skills/kaist-cli/agents/: openai.yaml
src/kaist_cli/: klms.py  main.py  storage.py
src/kaist_cli/cli/: __init__.py  dispatch.py  errors.py  help_format.py  output.py  parser.py
src/kaist_cli/core/: __init__.py  agents.py  contracts.py  distribution.py  envelope.py  error_registry.py  fsutil.py  help_format.py  models.py  runtime.py  state_store.py  system_registry.py  timeutil.py  updater.py  versioning.py
src/kaist_cli/systems/: __init__.py
src/kaist_cli/v2/: __init__.py  main.py  (+3 more)
tests/: cli_helpers.py  test_agents.py  test_assignments_cli.py  test_auth_flows.py  test_auth_missing_cli.py  test_auth_mode_priority.py  test_cli_contract.py  test_course_metadata_doc.py  test_courses_cli.py  test_dashboard_cli.py  test_files_cli.py  test_fixture_integration.py  test_help_and_skill.py  test_maintainability.py  test_notices_cli.py  test_parsers.py  test_perf_helpers.py  test_registry.py  test_startup_imports.py  test_sync_dev_cli.py  test_updater.py  test_v2_cli.py  test_videos_cli.py
tests/fixtures/: dashboard_sample.html  kaist_sso_login2factor.html  kaist_sso_login_view.html  notice_detail_sample.html  notices_sample.html
(+59 files in other folders)
