[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaist-cli"
version = "0.4.17"
description = "CLI for KAIST systems (starting with KLMS)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.2.2",
  "beautifulsoup4>=4.12.0",
  "playwright>=1.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
kaist = "kaist_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kaist_cli"]
